eclat-compiler/tests/good/syntax/pair_pat_toplevel.ecl
type t = (int * int);;

let (x : t) = (5,6);;

let (a,b) = x ;;

let main () = a;;
