eclat-compiler/tests/bad/abstract_type_decl/s0.ecl

let main (x:t<5>) = x ;;

(* ==============================
   file tests/bad/abstract_type_decl/s0.ecl, line 2, characters 12-13:
   Error: Unbound type constructor t
   ============================== *)